# ams-builder-workshop

./: .gitignore  .tool-versions  Dockerfile  README.md  flake.nix  pyproject.toml
.direnv/: flake-profile-1-link
notebooks/: langchain-basics.ipynb
