[tool.poetry]
name = "ams-builder-workshop"
version = "0.1.0"
description = "Local setup for LLM Workshop @ AI Builders, AMS"
authors = ["pratos <prthamesh.sarang@gmail.com>"]
readme = "README.md"
packages = [{include = "src/"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
langflow = "^0.0.81"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
